<resources>
    <string name="app_name">ChessClock</string>
    <string name="player_one_win_by_time">White wins by time!!</string>
    <string name="player_two_win_by_time">Black wins by time!!</string>
    <string name="timer_length">Time</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_time_in_minute">Enter time in minute</string>
    <string name="enter_increment_time_in_sec">Enter increment time in seconds</string>
    <string name="normal_timer">Normal timer</string>
    <string name="incremental_timer">Incremental timer</string>
    <string name="handicap_timer">Handicap timer</string>
    <string name="player_two">Player 2</string>
    <string name="player_one">Player 1</string>
    <string name="timer_icon">Timer icon</string>
    <string name="play_icon">Play icon</string>
    <string name="pause_icon">Pause icon</string>
    <string name="reset_icon">Reset icon</string>
    <string name="splash_image">Image for Splash activity</string>
</resources>
