<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/set_timer_layout_rg_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_10dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/set_timer_layout_rb_normal_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/normal_timer" />

        <RadioButton
            android:id="@+id/set_timer_layout_rb_incremental_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incremental_timer" />

        <RadioButton
            android:id="@+id/set_timer_layout_rb_handicap_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/handicap_timer" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/set_timer_layout_ll_player1_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/set_timer_layout_tv_player_one_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10dp"
            android:text="@string/player_one"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/size_16sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/set_timer_layout_til_time1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_time_in_minute">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/set_timer_layout_et_time1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_10dp"
                android:inputType="number"
                android:maxLength="2"
                android:padding="10dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/set_timer_layout_til_increment_time1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_increment_time_in_sec"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/set_timer_layout_et_increment_time1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_10dp"
                android:inputType="number"
                android:maxLength="2"
                android:padding="@dimen/size_10dp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/set_timer_layout_ll_player2_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10dp"
            android:text="@string/player_two"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/size_16sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/set_timer_layout_til_time2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_time_in_minute">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/set_timer_layout_et_time2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_10dp"
                android:inputType="number"
                android:maxLength="2"
                android:padding="@dimen/size_10dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/set_timer_layout_til_increment_time2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_increment_time_in_sec">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/set_timer_layout_et_increment_time2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_10dp"
                android:inputType="number"
                android:maxLength="2"
                android:padding="@dimen/size_10dp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</LinearLayout>